--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1e16c8ff60.js" crossorigin="anonymous"></script>
     <title>Boxing Website</title>
 </head>
+<!-- make colors of website neon green and black -->
 <body>
-    
+    <!-- navigation bar -->
+    <section>
+        <nav>
+            <img src="./305305642_469770425162720_7656313382026183000_n.jpg" alt="logo">
+            <div class="nav_right_section">
+                <ul>
+                    <li>About</li>
+                    <li>Training</li>
+                    <li>Classes</li>
+                    <li>Shop</li>
+                    <li>Contact</li>
+                </ul>
+                <input type="text">
+                <i class="fa-solid fa-user"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
