--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- make colors of website neon green and black -->
 <body>
     <!-- navigation bar -->
-    <section>
+    <section class="navigation">
         <nav>
             <img src="./305305642_469770425162720_7656313382026183000_n.jpg" alt="logo">
             <div class="nav_right_section">
@@ -28,5 +28,35 @@
             </div>
         </nav>
     </section>
+
+    <!-- about section -->
+<section class="about">
+    <div class="container">
+        <img src="./about.jpeg" alt="picture of boxer">
+        <div class="about_text">
+            <h2 class="about_header">
+                About Us
+            </h2>
+            <p>Welcome to Surbiton Boxing Club, your local community-based amateur sports club dedicated to promoting fitness 
+                and well-being through the art of boxing.
+                Established in 2010, Surbiton Boxing Club proudly holds affiliation with the esteemed England Boxing organisation. 
+                Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- training section -->
+<section class="training">
+    <div class="container">
+        <div class="training_text">
+            <h2>Training with us</h2>
+            <p>Here in Surbiton Boxing Club we aim to build champions who can compete professionally. We are here every day and there there
+                 are classes that range from novice to professionals. In addition to building champions we also made a special <span>heat class</span>for 
+                people who want to keep fit and challenge their physical abilities.  </p>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
