Training html section finished, table started

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h2 class="about_header">
                 About Us
             </h2>
-            <p>Welcome to Surbiton Boxing Club, your local community-based amateur sports club dedicated to promoting fitness 
+            <p>Welcome to <span class="club_name">Surbiton Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
                 and well-being through the art of boxing.
-                Established in 2010, Surbiton Boxing Club proudly holds affiliation with the esteemed England Boxing organisation. 
+                Established in 2010, <span class="club_name">Surbiton Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
                 Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
             </p>
         </div>
@@ -51,10 +51,36 @@
     <div class="container">
         <div class="training_text">
             <h2>Training with us</h2>
-            <p>Here in Surbiton Boxing Club we aim to build champions who can compete professionally. We are here every day and there there
-                 are classes that range from novice to professionals. In addition to building champions we also made a special <span>heat class</span>for 
-                people who want to keep fit and challenge their physical abilities.  </p>
+            <p>At the heart of our training program is a dedicated and tightly-knit team of highly qualified coaches. Each session is carefully 
+                guided and enriched with their invaluable advice and expertise. 
+                Our coaching team is bound together by a common passion for imparting knowledge and instilling a love for the sport. 
+                Under the guidance of our Head Coach and the coaching team collaborate to shape a 
+                comprehensive boxing training program that emphasizes fundamental excellence.
+            </p>
+            <p> In our meticulously structured classes, you will gain mastery over the core elements of Olympic-style boxing. 
+                As you progress and develop your skills, our club offers the opportunity for carded boxers to proudly represent Surbiton A.B.C. on regional, 
+                national, and international stages, making your boxing journey truly rewarding.
+            </p>
+            <p id="annual_membership">
+                An annual club membership - costing £30 - is required from the 4th session onwards. 
+                Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
+            </p>
         </div>
+    </div>
+</section>
+
+<!-- Classes section -->
+<section class="classes">
+    <div class="classes_description">
+        <h2 class="classes_title">Classes Schedule</h2>
+        <p>Here in <span class="club_name">surbiton boxing club</span> all boxers aged 10 and above are welcomed. We have separated our classes based on
+        ability &amp; age groups. In order to produce a high standard of competitive boxers, amateur boxing classes and recreational keep-fit <span>classes
+        are kept separate.</span></p>
+        <p class="new_joiners">New joiners should visit the club to register interest before starting any training at <span class="club_name">surbiton boxing
+        club</span></p>
+    </div>
+    <div class="classes_table">
+        
     </div>
 </section>
 
