--- a/index.html
+++ b/index.html
@@ -80,7 +80,111 @@
         club</span></p>
     </div>
     <div class="classes_table">
-        
+        <table class="table_monday">
+            <th style="color: red;">Not sure yet</th>
+            <tr>
+                <th>Monday</th>
+            </tr>
+            <tr>
+                <td>17:15 - 18:15</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>beginners and novice</td>
+            </tr>
+            <tr>
+                <td>18:30 - 19:30</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>high intensity training</td>
+            </tr>
+            <tr>
+                <td>19:45 - 20:45</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>training camp</td>
+            </tr>
+        </table>
+
+        <table class="table_tuesday">
+            <tr>
+                <th>Tuesday</th>
+            </tr>
+            <tr>
+                <td>17:00 - 18:00</td>
+                <td><a href="#">amateur boxing junior</a></td>
+                <td>all abilities</td>
+            </tr>
+            <tr>
+                <td>18:00 - 19:15</td>
+                <td><a href="#">amateur boxing youth</a></td>
+                <td>development class</td>
+            </tr>
+            <tr>
+                <td>19:45 - 20:45</td>
+                <td><a href="#">amateur boxing senior</a></td>
+                <td>carded boxers only</td>
+            </tr>
+        </table>
+
+        <table class="table_wednesday">
+            <tr>
+                <th>Wednesday</th>
+            </tr>
+            <tr>
+                <td>17:15 - 18:15</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>beginners and novice</td>
+            </tr>
+            <tr>
+                <td>18:30 - 19:30</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>high intensity training</td>
+            </tr>
+            <tr>
+                <td>19:45 - 20:45</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>training camp</td>
+            </tr>
+        </table>
+
+        <table class="table_thursday">
+            <tr>
+                <th>Thursday</th>
+            </tr>
+            <tr>
+                <td>17:00 - 18:00</td>
+                <td><a href="#">amateur boxing junior</a></td>
+                <td>all abilities</td>
+            </tr>
+            <tr>
+                <td>18:00 - 19:15</td>
+                <td><a href="#">amateur boxing youth</a></td>
+                <td>development class</td>
+            </tr>
+            <tr>
+                <td>19:45 - 20:45</td>
+                <td><a href="#">amateur boxing senior</a></td>
+                <td>carded boxers only</td>
+            </tr>
+        </table>
+
+        <table class="table_saturday">
+            <tr>
+                <th>Saturday</th>
+            </tr>
+            <tr>
+                <td>9:15 - 10:15</td>
+                <td><a href="#">boxing awards</a></td>
+                <td>sign up required</td>
+            </tr>
+            <tr>
+                <td>10:30 - 11:45</td>
+                <td><a href="#">amateur boxing junior &amp; youth</a></td>
+                <td>beginners and novice</td>
+            </tr>
+            <tr>
+                <td>19:45 - 20:45</td>
+                <td><a href="#">keep-fit boxing</a></td>
+                <td>all abilities</td>
+            </tr>
+        </table>
     </div>
 </section>
 
