--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- navigation bar -->
     <section class="navigation">
         <nav>
-            <img src="./305305642_469770425162720_7656313382026183000_n.jpg" alt="logo">
+            <img src="./images/logo.jpg" alt="logo">
             <div class="nav_right_section">
                 <ul>
-                    <li>About</li>
-                    <li>Training</li>
-                    <li>Classes</li>
-                    <li>Shop</li>
-                    <li>Contact</li>
+                    <li><a href="#about_section">About</a></li>
+                    <li><a href="#training_section">Training</a></li>
+                    <li><a href="#classes_section">Classes</a></li>
+                    <li><a href="#shop_section">Shop</a></li>
+                    <li><a href="#contact_section">Contact</a></li>
                 </ul>
                 <input type="text">
                 <i class="fa-solid fa-user"></i>
@@ -30,9 +30,9 @@
     </section>
 
     <!-- about section -->
-<section class="about">
+<section id="about_section" class="about">
     <div class="container">
-        <img src="./about.jpeg" alt="picture of boxer">
+        <img src="./images/about.jpeg" alt="picture of boxer">
         <div class="about_text">
             <h2 class="about_header">
                 About Us
@@ -46,8 +46,10 @@
     </div>
 </section>
 
+<!-- add a youtube video of boxing -->
+
 <!-- training section -->
-<section class="training">
+<section id="training_section" class="training">
     <div class="container">
         <div class="training_text">
             <h2>Training with us</h2>
@@ -70,7 +72,7 @@
 </section>
 
 <!-- Classes section -->
-<section class="classes">
+<section id="classes_section" class="classes">
     <div class="classes_description">
         <h2 class="classes_title">Classes Schedule</h2>
         <p>Here in <span class="club_name">surbiton boxing club</span> all boxers aged 10 and above are welcomed. We have separated our classes based on
@@ -81,7 +83,6 @@
     </div>
     <div class="classes_table">
         <table class="table_monday">
-            <th style="color: red;">Not sure yet</th>
             <tr>
                 <th>Monday</th>
             </tr>
@@ -188,5 +189,49 @@
     </div>
 </section>
 
+<!-- shop section -->
+<!-- make 3-4 items like gloves, wraps, shoes, mouth guards -->
+<section id="shop_section" class="shop">
+    <div class="shop_gloves">
+        <img src="./images/boxing_gloves.jpg.webp" alt="boxing gloves">
+
+        <div class="shop_gloves__text">
+            <p class="gloves_description">Step up your training game with AQF Boxing Training Gloves from the Essential Series. These gloves are designed to enhance your performance, provide maximum durability, and offer essential features for an effective boxing training experience.</p>
+            <p class="price">
+                £24.99
+            </p>
+        </div>
+
+        <a href="https://uk.aqfsports.com/products/aqf-boxing-training-gloves-essential-series?variant=39348940701799&currency=GBP&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&utm_campaign=google_shopping_campaign&utm_source=google&utm_medium=smart_campaign&gad=1&gclid=Cj0KCQjwmICoBhDxARIsABXkXlLioDDNfQn37cF0ybCihfnOV4Sh3Zd_qYiEVKPG7gGuyxkxXge7sb0aAr7CEALw_wcB"><button>buy now</button></a>
+    </div>
+
+    <div class="shop_wraps">
+        <img src="./images/boxing_wraps.jpg.webp" alt="boxing wraps">
+
+        <div class="shop_wraps__text">
+            <p class="wraps_description">Made from a supple stretch cotton blend, the 4.5m BOXRAW Hand Wraps feature a patent pending hook and loop closure on the thumb loop saving you time as you wrap or unwrap your hands. </p>
+            <p class="price">
+                £15.00
+            </p>
+        </div>
+
+        <a href=https://uk.boxraw.com/products/4-5m-hand-wraps-neon-green><button>buy now</button></a>
+    </div>
+
+    <div class="shop_mouth-guard">
+        <img src="./images/mouth-guard.jpg.webp" alt="boxing gloves">
+
+        <div class="shop_mouth-guard__text">
+            <p class="mouth-guard_description">SAFEJAWZ® 'Fangz' Mouthguard - Protection with Personality. The revolutionary new sports mouthguard that through all of its advanced product features, boasts a very comfortable fit and optimum protection for ALL sports.</p>
+            <p class="price">
+                £14.99
+            </p>
+        </div>
+
+        <a href="https://www.safejawz.com/products/safejawz-extro-series-self-fit-fangz-mouthguard?variant=21666707207&currency=GBP&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&tw_source=google&tw_adid=&tw_campaign=20381425142&gclid=CjwKCAjwu4WoBhBkEiwAojNdXpNGK4Jbuhks8_YdL95IiMiAdQ_kuDUqGV3IeEWKfjH6YX7UMvqrQxoC5jsQAvD_BwE"><button>buy now</button></a>
+    </div>
+
+    
+</section>
 </body>
 </html>
