--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
                     <li><a href="#shop_section">Shop</a></li>
                     <li><a href="#contact_section">Contact</a></li>
                 </ul>
-                <input type="text">
-                <i class="fa-solid fa-user"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
             </div>
         </nav>
     </section>
@@ -43,6 +40,9 @@
                 Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
             </p>
         </div>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
     </div>
 </section>
 
@@ -68,6 +68,7 @@
                 Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
             </p>
         </div>
+        <img src="./images/sessions.jpg" alt="training">
     </div>
 </section>
 
@@ -231,7 +232,50 @@
         <a href="https://www.safejawz.com/products/safejawz-extro-series-self-fit-fangz-mouthguard?variant=21666707207&currency=GBP&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&tw_source=google&tw_adid=&tw_campaign=20381425142&gclid=CjwKCAjwu4WoBhBkEiwAojNdXpNGK4Jbuhks8_YdL95IiMiAdQ_kuDUqGV3IeEWKfjH6YX7UMvqrQxoC5jsQAvD_BwE"><button>buy now</button></a>
     </div>
 
-    
+    <!-- contact section -->
+    <section id="contact_section" class="contact">
+       <div>
+            <form action="#" class="form" name="boxing-contact" autocomplete="on">
+                <label for="full-name">Full Name:</label>
+                <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
+                <label for="email">Email:</label>
+                <input type="text" class="input" placeholder="yourname@email.com" autocomplete="email" id="email" required/>
+                <label for="phone-number">Phone Number:</label>
+                <input type="number" name="phone-number" id="number" class="input" placeholder="+44 900 456 123">
+
+                <label for="inquiry">Inquiry</label>
+                <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
+                    <option value=""></option>
+                    <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
+                    <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
+                    <option value="What do I need to bring?">What do I need to bring?</option>
+                    <option value="Can Parents/Partners stay to watch?">Can Parents/Partners stay to watch?</option>
+                    <option value="How can I pay?">How can I pay?</option>
+                    <option value="Other">Other</option>
+                </select>
+                <button class="form-button">submit</button>
+            </form>
+       </div>
+    </section>
 </section>
+
+<!-- footer -->
+
+<footer>
+    <div class="location">
+        <h1 class="location_header">come join us</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <h4>address</h4>
+    <p>Surbiton Boxing Club,
+        Unit A BT Exchange,
+        5 Ewell Road,
+        Surbiton, Surrey,
+        KT6 6AB</p>
+    <h4>phone</h4>
+    <p>0208 390 1234</p>
+    <h4>email</h4>
+    <a href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+</footer>
 </body>
 </html>
