CSS wip, done nav and about section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="https://kit.fontawesome.com/1e16c8ff60.js" crossorigin="anonymous"></script>
     <title>Boxing Website</title>
 </head>
-<!-- make colors of website neon green and black -->
+
 <body>
     <!-- navigation bar -->
     <section class="navigation">
         <nav>
-            <img src="./images/logo.jpg" alt="logo">
+            <img class="logo" src="./images/logo.jpg" alt="logo">
             <div class="nav_right_section">
                 <ul>
                     <li><a href="#about_section">About</a></li>
@@ -28,22 +28,23 @@
 
     <!-- about section -->
 <section id="about_section" class="about">
-    <div class="container">
-        <img src="./images/about.jpeg" alt="picture of boxer">
-        <div class="about_text">
+        <img class="img_about" src="./images/male_boxing.jpg" alt="picture of boxer">
+        <div class="about_box">
             <h2 class="about_header">
                 About Us
             </h2>
-            <p>Welcome to <span class="club_name">Surbiton Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
+            <p class="about_text">Welcome to <span class="club_name">Surbiton Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
                 and well-being through the art of boxing.
                 Established in 2010, <span class="club_name">Surbiton Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
                 Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
             </p>
+
+            <div class="about_socials">
+                <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-2xl"></i></a>
+            </div>
         </div>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-    </div>
 </section>
 
 <!-- add a youtube video of boxing -->
