CSS wip table finished

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 Under the guidance of our Head Coach and the coaching team collaborate to shape a 
                 comprehensive boxing training program that emphasizes fundamental excellence.
             </p>
-            <p id="annual_membership">
+            <p class="small_text">
                 An annual club membership - costing £30 - is required from the 4th session onwards. 
                 Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
             </p>
@@ -86,20 +86,20 @@
                 <tr>
                     <th>Monday</th>
                 </tr>
-                <tr>
-                    <td><span class="important_text">17:15 - 18:15</span></td>
-                    <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                    <td>beginners and novice</td>
+                <tr class="border_top">
+                    <td class="classes_time">17:15 - 18:15</td>
+                    <td class="class_type">keep-fit boxing</td>
+                    <td class="small_text">beginners and novice</td>
                 </tr>
-                <tr>
-                    <td><span class="important_text">18:30 - 19:30</span></td>
-                    <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                    <td>high intensity training</td>
+                <tr class="border_top">
+                    <td class="classes_time">18:30 - 19:30</td>
+                    <td class="class_type">keep-fit boxing</td>
+                    <td class="small_text">high intensity training</td>
                 </tr>
-                <tr>
-                    <td><span class="important_text">19:45 - 20:45</span></td>
-                    <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                    <td>training camp</td>
+                <tr class="border_top">
+                    <td class="classes_time">19:45 - 20:45</td>
+                    <td class="class_type">keep-fit boxing</td>
+                    <td class="small_text">training camp</td>
                 </tr>
             </table>
 
@@ -107,20 +107,20 @@
             <tr>
                 <th>Tuesday</th>
             </tr>
-            <tr>
-                <td>17:00 - 18:00</td>
-                <td><a class="class_type" href="#">amateur boxing junior</a></td>
-                <td>all abilities</td>
+            <tr class="border_top">
+                <td class="classes_time">17:00 - 18:00</td>
+                <td class="class_type">amateur boxing junior</td>
+                <td class="small_text">all abilities</td>
             </tr>
-            <tr>
-                <td>18:00 - 19:15</td>
-                <td><a class="class_type" href="#">amateur boxing youth</a></td>
-                <td>development class</td>
+            <tr class="border_top">
+                <td class="classes_time">18:00 - 19:15</td>
+                <td class="class_type">amateur boxing youth</td>
+                <td class="small_text">development class</td>
             </tr>
-            <tr>
-                <td>19:45 - 20:45</td>
-                <td><a class="class_type" href="#">amateur boxing senior</a></td>
-                <td>carded boxers only</td>
+            <tr class="border_top">
+                <td class="classes_time">19:45 - 20:45</td>
+                <td class="class_type">amateur boxing senior</td>
+                <td class="small_text">carded boxers only</td>
             </tr>
         </table>
 
@@ -128,20 +128,20 @@
             <tr>
                 <th>Wednesday</th>
             </tr>
-            <tr>
-                <td>17:15 - 18:15</td>
-                <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                <td>beginners and novice</td>
+            <tr class="border_top">
+                <td class="classes_time">17:15 - 18:15</td>
+                <td class="class_type">keep-fit boxing</td>
+                <td class="small_text">beginners and novice</td>
             </tr>
-            <tr>
-                <td>18:30 - 19:30</td>
-                <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                <td>high intensity training</td>
+            <tr class="border_top">
+                <td class="classes_time">18:30 - 19:30</td>
+                <td class="class_type">keep-fit boxing</td>
+                <td class="small_text">high intensity training</td>
             </tr>
-            <tr>
-                <td>19:45 - 20:45</td>
-                <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                <td>training camp</td>
+            <tr class="border_top">
+                <td class="classes_time">19:45 - 20:45</td>
+                <td class="class_type">keep-fit boxing</td>
+                <td class="small_text">training camp</td>
             </tr>
         </table>
 
@@ -149,20 +149,20 @@
             <tr>
                 <th>Thursday</th>
             </tr>
-            <tr>
-                <td>17:00 - 18:00</td>
-                <td><a class="class_type" href="#">amateur boxing junior</a></td>
-                <td>all abilities</td>
+            <tr class="border_top">
+                <td class="classes_time">17:00 - 18:00</td>
+                <td class="class_type">amateur boxing junior</td>
+                <td class="small_text">all abilities</td>
             </tr>
-            <tr>
-                <td>18:00 - 19:15</td>
-                <td><a class="class_type" href="#">amateur boxing youth</a></td>
-                <td>development class</td>
+            <tr class="border_top">
+                <td class="classes_time">18:00 - 19:15</td>
+                <td class="class_type">amateur boxing youth</td>
+                <td class="small_text">development class</td>
             </tr>
-            <tr>
-                <td>19:45 - 20:45</td>
-                <td><a class="class_type" href="#">amateur boxing senior</a></td>
-                <td>carded boxers only</td>
+            <tr class="border_top">
+                <td class="classes_time">19:45 - 20:45</td>
+                <td class="class_type">amateur boxing senior</td>
+                <td class="small_text">carded boxers only</td>
             </tr>
         </table>
 
@@ -170,20 +170,20 @@
             <tr>
                 <th>Saturday</th>
             </tr>
-            <tr>
-                <td>9:15 - 10:15</td>
-                <td><a class="class_type" href="#">boxing awards</a></td>
-                <td>sign up required</td>
+            <tr class="border_top">
+                <td class="classes_time">9:15 - 10:15</td>
+                <td class="class_type">boxing awards</td>
+                <td class="small_text">sign up required</td>
             </tr>
-            <tr>
-                <td>10:30 - 11:45</td>
-                <td><a class="class_type" href="#">amateur boxing junior &amp; youth</a></td>
-                <td>beginners and novice</td>
+            <tr class="border_top">
+                <td class="classes_time">10:30 - 11:45</td>
+                <td class="class_type">amateur boxing</td>
+                <td class="small_text">beginners and novice</td>
             </tr>
-            <tr>
-                <td>19:45 - 20:45</td>
-                <td><a class="class_type" href="#">keep-fit boxing</a></td>
-                <td>all abilities</td>
+            <tr class="border_top">
+                <td class="classes_time">19:45 - 20:45</td>
+                <td class="class_type">keep-fit boxing</td>
+                <td class="small_text">all abilities</td>
             </tr>
         </table>
     </div>
