--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <!-- navigation bar -->
     <section class="navigation">
         <nav>
-            <img class="logo" src="./images/logo.jpg" alt="logo">
+            <p class="logo">
+                <span style="--i:1">surbiton</span>
+                <span style="--i:2">boxing</span>
+                <span style="--i:3">club</span>
+            </p>
             <div class="nav_right_section">
                 <ul>
                     <li><a href="#about_section">About</a></li>
@@ -257,30 +261,33 @@
 </section>
 
     <!-- contact section -->
-    <section id="contact_section" class="contact">
-       <div>
-            <form action="#" class="form" name="boxing-contact" autocomplete="on">
-                <label for="full-name">Full Name:</label>
-                <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
-                <label for="email">Email:</label>
-                <input type="text" class="input" placeholder="yourname@email.com" autocomplete="email" id="email" required/>
-                <label for="phone-number">Phone Number:</label>
-                <input type="number" name="phone-number" id="number" class="input" placeholder="+44 900 456 123">
-
-                <label for="inquiry">Inquiry</label>
-                <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
-                    <option value=""></option>
-                    <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
-                    <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
-                    <option value="What do I need to bring?">What do I need to bring?</option>
-                    <option value="Can Parents/Partners stay to watch?">Can Parents/Partners stay to watch?</option>
-                    <option value="How can I pay?">How can I pay?</option>
-                    <option value="Other">Other</option>
-                </select>
-                <button class="form-button">submit</button>
-            </form>
-       </div>
-    </section>
+<section id="contact_section">
+    <div class="test">
+        <h2>Contact us</h2>
+            <div class="form_contact">
+                <img class="contact_img" src="./images/female2.jpeg" alt="woman boxer">
+                    <form action="#" class="form" name="boxing-contact" autocomplete="on">
+                        <label for="full-name">Full Name:</label>
+                        <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
+                        <label for="email">Email:</label>
+                        <input type="text" class="input" placeholder="yourname@email.com" autocomplete="email" id="email" required/>
+                        <label for="phone-number">Phone Number:</label>
+                        <input type="text" name="phone-number" id="number" class="input" placeholder="+44 900 456 123">
+        
+                        <label for="inquiry">Inquiry</label>
+                        <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
+                            <option value=""></option>
+                            <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
+                            <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
+                            <option value="What do I need to bring?">What do I need to bring?</option>
+                            <option value="Can Parents/Partners stay to watch?">Can Parents/Partners stay to watch?</option>
+                            <option value="How can I pay?">How can I pay?</option>
+                            <option value="Other">Other</option>
+                        </select>
+                        <button class="form_btn">submit</button>
+                    </form>
+            </div>
+    </div>
 </section>
 
 <!-- footer -->
