--- a/index.html
+++ b/index.html
@@ -293,20 +293,23 @@
 <!-- footer -->
 
 <footer>
-    <div class="location">
-        <h1 class="location_header">come join us</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <h4>address</h4>
-    <p>Surbiton Boxing Club,
-        Unit A BT Exchange,
-        5 Ewell Road,
-        Surbiton, Surrey,
-        KT6 6AB</p>
-    <h4>phone</h4>
-    <p>0208 390 1234</p>
-    <h4>email</h4>
-    <a href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+    <h1 class="footer_header">come join us</h1>
+        <div class="location" role="contentinfo">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+            <div class="location_details">
+                <h4>address</h4>
+                <p>Surbiton Boxing Club,<br>
+                    Unit A BT Exchange,<br>
+                    5 Ewell Road,<br>
+                    Surbiton, Surrey,<br>
+                    KT6 6AB</p>
+                <h4>phone</h4>
+                <p>0208 390 1234</p>
+                <h4>email</h4>
+                <a class="emial" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+            </div>
+        </div>
 </footer>
 </body>
 </html>
