--- a/classes.html
+++ b/classes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <title>Surbiton Boxing Classes</title>
 </head>
 <body>
@@ -76,7 +77,7 @@
                 </tr>
                 <tr class="border_top">
                     <td class="classes_time">19:45 - 20:45</td>
-                    <td class="class_type">amateur boxing senior</td>
+                    <td class="class_type">amateur boxing seniors</td>
                     <td class="small_text">carded boxers only</td>
                 </tr>
             </table>
