--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <title>Contact Us</title>
 </head>
 <body>
@@ -27,33 +29,31 @@
             </nav>
         </section>
 
-    <section id="contact_section">
-        <div class="test">
-            <h2>Contact us</h2>
-                <div class="form_contact">
-                    <img class="contact_img" src="./images/female2.jpeg" alt="woman boxer">
-                        <form action="#" class="form" name="boxing-contact" autocomplete="on">
-                            <label for="full-name">Full Name:</label>
-                            <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
-                            <label for="email">Email:</label>
-                            <input type="text" class="input" placeholder="yourname@email.com" autocomplete="email" id="email" required/>
-                            <label for="phone-number">Phone Number:</label>
-                            <input type="text" name="phone-number" id="number" class="input" placeholder="+44 900 456 123">
+    <section class="contact">
+        <h2>Contact us</h2>
+            <div class="form_contact">
+                <img class="contact_img" src="./images/female2.jpeg" alt="woman boxer">
+                    <form action="#" class="form" name="boxing-contact" autocomplete="on">
+                        <label for="full-name">Full Name:</label>
+                        <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
+                        <label for="email">Email:</label>
+                        <input type="text" class="input" placeholder="yourname@email.com" autocomplete="email" id="email" required/>
+                        <label for="phone-number">Phone Number:</label>
+                        <input type="text" name="phone-number" id="number" class="input" placeholder="+44 900 456 123">
             
-                            <label for="inquiry">Inquiry</label>
-                            <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
-                                <option value=""></option>
-                                <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
-                                <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
-                                <option value="What do I need to bring?">What do I need to bring?</option>
-                                <option value="Can Parents/Partners stay to watch?">Can Parents/Partners stay to watch?</option>
-                                <option value="How can I pay?">How can I pay?</option>
-                                <option value="Other">Other</option>
+                        <label for="inquiry">Inquiry</label>
+                        <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
+                            <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
+                            <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
+                            <option value="What do I need to bring?">What do I need to bring?</option>
+                            <option value="Can Parents/Partners stay to watch?">Can Parents/Partners stay to watch?</option>
+                            <option value="How can I pay?">How can I pay?</option>
+                            <option value="Other">Other</option>
                             </select>
-                            <button class="form_btn">submit</button>
-                        </form>
-                </div>
-        </div>
+                        <option value=""></option>
+                        <button class="form_btn">submit</button>
+                    </form>
+            </div>
     </section>
 </body>
 </html>
