--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1e16c8ff60.js" crossorigin="anonymous"></script>
     <title>Boxing Website</title>
 </head>
@@ -53,13 +54,11 @@
 </div>
 </section>
 
-<!-- add a youtube video of boxing -->
-
 <!-- training section -->
 <section class="training container">
-        <div class="training_box">
-            <h2>Training with us</h2>
-            <p>At the heart of our training program is a dedicated and tightly-knit team of highly qualified coaches. Each session is carefully 
+    <div class="training_box">
+        <h2>Training with us</h2>
+            <p>At the heart of our training program is a dedicated and  tightly-knit team of highly qualified coaches. Each session is carefully 
                 guided and enriched with their invaluable advice and expertise. 
                 Our coaching team is bound together by a common passion for imparting knowledge and instilling a love for the sport. 
                 Under the guidance of our Head Coach and the coaching team collaborate to shape a 
@@ -69,19 +68,20 @@
                 An annual club membership - costing £30 - is required from the 4th session onwards. 
                 Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
             </p>
-        </div>
+    </div>
         <img class="img_training" src="./images/sessions.jpg" alt="training">
 </section>
 
+<!-- classes section -->
+
 <section class="classes_main container">
-    <img class="classes_main--img" src="./images/male_boxing2.jpeg">
+    <img class="classes_main--img" src="./images/johann-walter-bantz-Clv9DfJLwac-unsplash.jpg">
         <div class="classes_main--text">
             <h2>Classes</h2>
             <p>Whether you're a junior looking to explore the world of boxing, an adult seeking a fun and effective fitness routine, or a professional boxer striving for greatness, our boxing classes cater to your needs. Join our gym and become part of a community that supports your boxing journey, no matter your age or skill level. Get started today and discover the physical, mental, and emotional benefits that boxing can offer.</p>
             <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a>
         </div>
 </section>
-
 
 <!-- footer -->
 
