CSS complete for the moment

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <section class="contact">
         <h2>Contact us</h2>
             <div class="form_contact">
-                <img class="contact_img" src="./images/female2.jpeg" alt="woman boxer">
+                <img class="contact_img" src="./images/bogdan-yukhymchuk-XmvuWRDimrg-unsplash.jpg" alt="boxing gloves">
                     <form action="#" class="form" name="boxing-contact" autocomplete="on">
                         <label for="full-name">Full Name:</label>
                         <input type="text" class="input" placeholder="John Smith" name="full-name" autocomplete="name" minlength="4" aria-label="full-name" id="full-name" tabindex="3" required/>
@@ -43,6 +43,7 @@
             
                         <label for="inquiry">Inquiry</label>
                         <select name="inquiry" id="inquiry" class="input" placeholder="What is your question?">
+                            <option value=""></option>
                             <option value="Can I just turn up and train or do I have to book in advance?">Can I just turn up and train or do I have to book in advance?</option>
                             <option value="How do I join a Junior/Youth session?">How do I join a Junior/Youth session?</option>
                             <option value="What do I need to bring?">What do I need to bring?</option>
@@ -50,7 +51,6 @@
                             <option value="How can I pay?">How can I pay?</option>
                             <option value="Other">Other</option>
                             </select>
-                        <option value=""></option>
                         <button class="form_btn">submit</button>
                     </form>
             </div>
