--- a/classes.html
+++ b/classes.html
@@ -30,7 +30,7 @@
             </nav>
     </section>
 
-    <section class="classes">
+    <section class="classes box">
         <div class="classes_description">
             <h2>Classes Schedule</h2>
             <p class="classes_text">Here in <span class="club_name">surbiton boxing club</span> all boxers <span class="important_text">aged 10 and above</span> are welcomed. We have separated our classes based on
