--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             </nav>
         </section>
 
-    <section class="contact">
+    <section class="contact box">
         <h2>Contact us</h2>
             <div class="form_contact">
                 <img class="contact_img" src="./images/bogdan-yukhymchuk-XmvuWRDimrg-unsplash.jpg" alt="boxing gloves">
