--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </section>
 
     <!-- about section -->
-<section class="about container">
-<div class="container">
+<section class="about container box">
+<!-- <div class="container"> -->
             <img class="img_about" src="./images/male_boxing.jpg" alt="picture of boxer">
             <div class="about_box">
                 <h2>
@@ -51,11 +51,11 @@
                     <a href="#"><i class="fa-brands fa-youtube fa-2xl"></i></a>
                 </div>
             </div>
-</div>
+<!-- </div> -->
 </section>
 
 <!-- training section -->
-<section class="training container">
+<section class="training container box">
     <div class="training_box">
         <h2>Training with us</h2>
             <p>At the heart of our training program is a dedicated and  tightly-knit team of highly qualified coaches. Each session is carefully 
@@ -74,7 +74,7 @@
 
 <!-- classes section -->
 
-<section class="classes_main container">
+<section class="classes_main container box">
     <img class="classes_main--img" src="./images/johann-walter-bantz-Clv9DfJLwac-unsplash.jpg">
         <div class="classes_main--text">
             <h2>Classes</h2>
@@ -88,7 +88,7 @@
 <footer>
     <h1 class="footer_header">come join us</h1>
         <div class="location" role="contentinfo">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" width="50px" height="50px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
             <div class="location_details">
                 <h4>address</h4>
