--- a/shop.html
+++ b/shop.html
@@ -29,7 +29,7 @@
             </nav>
     </section>
 
-    <section>
+    <section class="box">
         <h2>Shop now</h2>
         <p class="shop_slogan">Buy your essentials and get yourself ready for boxing</p>
         <div class="shop_container">
