--- a/classes.html
+++ b/classes.html
@@ -12,7 +12,7 @@
 
     <!-- navigation bar -->
     <section class="navigation">
-            <nav>
+            <nav class="nav_flex container">
                 <p class="logo">
                     <span style="--i:1">surbiton</span>
                     <span style="--i:2">boxing</span>
@@ -30,8 +30,8 @@
             </nav>
     </section>
 
-    <section class="classes box">
-        <div class="classes_description">
+    <section>
+        <div class="classes">
             <h2>Classes Schedule</h2>
             <p class="classes_text">Here in <span class="club_name">surbiton boxing club</span> all boxers <span class="important_text">aged 10 and above</span> are welcomed. We have separated our classes based on
             ability &amp; age groups. In order to produce a high standard of competitive boxers, amateur boxing classes and recreational keep-fit <span class="important_text">classes
@@ -146,5 +146,34 @@
             </table>
         </div>
     </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="container footer">
+                <h1 class="footer_header">come join us</h1>
+                    <div class="location" role="contentinfo">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    
+                        <div class="location_details">
+                            <div>
+                                <h4>address</h4>
+                                <p>Surbiton Boxing Club,<br>
+                                    Unit A BT Exchange,<br>
+                                    5 Ewell Road,<br>
+                                    Surbiton, Surrey,<br>
+                                    KT6 6AB</p>
+                            </div>
+                            <div>
+                                <h4>phone</h4>
+                                <p>0208 390 1234</p>
+                            </div>
+                            <div>
+                                <h4>email</h4>
+                                <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+        </footer>
 </body>
 </html>
