--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@
         <div class="classes_main--text">
             <h2>Classes</h2>
             <p>Whether you're a junior looking to explore the world of boxing, an adult seeking a fun and effective fitness routine, or a professional boxer striving for greatness, our boxing classes cater to your needs. Join our gym and become part of a community that supports your boxing journey, no matter your age or skill level. Get started today and discover the physical, mental, and emotional benefits that boxing can offer.</p>
-            <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a>
+
+        <div>            
+            <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a></div>
         </div>
 </section>
 
 <!-- footer -->
 
 <footer>
-<div class="container footer ">
+<div class="container footer">
         <h1 class="footer_header">come join us</h1>
             <div class="location" role="contentinfo">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
