First final commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- navigation bar -->
-    <section class="navigation">
+    <header class="navigation">
         <nav class="nav_flex container">
             <p class="logo">
                 <span style="--i:1">surbiton</span>
@@ -22,14 +22,14 @@
             <div class="nav_right_section">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#training_section">Training</a></li>
+                    <li><a href="./training.html">Training</a></li>
                     <li><a href="./classes.html">Classes</a></li>
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
-    </section>
+    </header>
 
     <!-- about section -->
 <section class="about container row">
@@ -68,6 +68,10 @@
                 An annual club membership - costing £30 - is required from the 4th session onwards. 
                 Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
             </p>
+
+            <div class="follow_links">            
+                <a href="./classes.html" class="link">Check how we train <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
     </div>
         <img class="img_training" src="./images/sessions.jpg" alt="training">
 </section>
@@ -80,9 +84,11 @@
             <h2>Classes</h2>
             <p>Whether you're a junior looking to explore the world of boxing, an adult seeking a fun and effective fitness routine, or a professional boxer striving for greatness, our boxing classes cater to your needs. Join our gym and become part of a community that supports your boxing journey, no matter your age or skill level. Get started today and discover the physical, mental, and emotional benefits that boxing can offer.</p>
 
-        <div>            
-            <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a></div>
+            <div class="follow_links">            
+                <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
         </div>
+        
 </section>
 
 <!-- footer -->
