--- a/classes.html
+++ b/classes.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- navigation bar -->
-    <section class="navigation">
+    <header class="navigation">
             <nav class="nav_flex container">
                 <p class="logo">
                     <span style="--i:1">surbiton</span>
@@ -21,14 +21,14 @@
                 <div class="nav_right_section">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="#training_section">Training</a></li>
+                        <li><a href="./training.html">Training</a></li>
                         <li><a href="./classes.html">Classes</a></li>
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
-    </section>
+    </header>
 
     <section>
         <div class="classes">
