--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <!-- navigation bar -->
-        <section class="navigation">
+        <header class="navigation">
             <nav class="nav_flex container">
                 <p class="logo">
                     <span style="--i:1">surbiton</span>
@@ -20,14 +20,14 @@
                 <div class="nav_right_section">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="#training_section">Training</a></li>
+                        <li><a href="./training.html">Training</a></li>
                         <li><a href="./classes.html">Classes</a></li>
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
-        </section>
+        </header>
 
     <section class="contact">
         <h2>Contact us</h2>
@@ -57,32 +57,32 @@
     </section>
 
         <!-- footer -->
-        <footer>
-            <div class="container footer">
-                    <h1 class="footer_header">come join us</h1>
-                        <div class="location" role="contentinfo">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <footer>
+        <div class="container footer">
+            <h1 class="footer_header">come join us</h1>
+                <div class="location" role="contentinfo">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         
-                            <div class="location_details">
-                                <div>
-                                    <h4>address</h4>
-                                    <p>Surbiton Boxing Club,<br>
+                        <div class="location_details">
+                            <div>
+                                <h4>address</h4>
+                                <p>Surbiton Boxing Club,<br>
                                         Unit A BT Exchange,<br>
                                         5 Ewell Road,<br>
                                         Surbiton, Surrey,<br>
                                         KT6 6AB</p>
-                                </div>
-                                <div>
-                                    <h4>phone</h4>
-                                    <p>0208 390 1234</p>
-                                </div>
-                                <div>
-                                    <h4>email</h4>
-                                    <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
-                                </div>
+                            </div>
+                            <div>
+                                <h4>phone</h4>
+                                <p>0208 390 1234</p>
+                            </div>
+                            <div>
+                                <h4>email</h4>
+                                <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
                             </div>
                         </div>
-            </div>
-            </footer>
+                </div>
+        </div>
+    </footer>
 </body>
 </html>
